fix pagination, navigation, text alignment

--- a/frontend/src/css/AdditionalInformation.css
+++ b/frontend/src/css/AdditionalInformation.css
@@ -5,11 +5,7 @@
 	float: left;
 }
 
-#additionalText > p {
-	text-align: left;
-}
-
-#additionalText > p {
+#additionalText p {
 	text-align: left;
 }
 
